corrected z-index to navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,7 @@ body, html {
   width: 100%;
   top: 0;
   background-color: rgba(60, 60, 60, 0.7);
+  z-index: 1;
 }
 
 .navbar li {
